# pinjected-reviewer

./: Claude.md  README.md  TODO.md  pyproject.toml
src/__package_for_tests__/: misusing_module.py  valid_module.py
src/pinjected_reviewer/: __init__.py  __main__.py  entrypoint.py
src/pinjected_reviewer/pytest_reviewer/: coding_rule_plugin.py  coding_rule_plugin_impl.py  inspect_code.py
src/review_materials/: how_to_use_pinjected.md
tests/pytest_reviewer/: test_deleted_files.py  test_detect_misuses.py
