[project]
name = "pinjected-reviewer"
version = "0.2.0"
description = "A git pre-commit hook that validates code against pinjected coding style guidelines"
authors = [
    { name = "proboscis", email = "nameissoap@gmail.com" }
]
dependencies = [
    "pinjected>=0.2.241",
    "pinjected-openai>=0.4.34",
    "tqdm>=4.67.1",
    "loguru>=0.7.3",
    "injected-utils>=0.1.32",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
pinjected-reviewer = "pinjected_reviewer.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pinjected_reviewer", "src/review_materials"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
